@startuml
'https://plantuml.com/sequence-diagram

hide circle
skinparam classAttributeIconSize 0

class ReviewController {
     +partialUpdate(): ResponseEntity<Review>
}

class ReviewServiceImpl {
    +partialUpdate(Long id, Review resource, long parseLong): Review

}

interface ReviewService <<interface>> {
    +partialUpdate(Long id, Review resource, long parseLong): Review

}

class Review {
    - reviewID
    - text
    - rating
    - upVote
    - downVote
    - funnyFact
    - dataTime
    - status
    - version
    Review(Long reviewId, String text, int rating, Date date, String status)

}

interface ReviewRepository <<interface>> {
    +applyPatch(Review review, Long desiredVersion): void
}

ReviewController..>ReviewService
ReviewController..>Review
ReviewService..>ReviewServiceImpl
ReviewServiceImpl..>ReviewRepository
ReviewRepository "1" -right-> "0..*" Review:  records
@enduml
